--- a/index.html
+++ b/index.html
@@ -5,50 +5,90 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Karla:ital,wght
-@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1
-,600;1,700;1,800&family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;
-0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap" 
-rel="stylesheet">   
+    <script src="https://kit.fontawesome.com/dd97ea1974.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-    <div class="wrapper">
+    <div class="wrapper"></div>
         <header>
-            <div class="logo"><img src="img/images/images/logo.svg"></div>
-            <nav class="main-menu"></nav>
-                <ul>
-                    <li class="menu-item"><a href="#"recipes</li>
+            <div class="logo"><img src="img/logo.svg"></div>
+            <nav>
+                <ul class="main-menu">
+                    <li class="menu-item"><a href="#">Recipes</a></li>
+                    <li class="menu-item"><a href="#">Recipes</a></li>
+                    <li class="menu-item"><a href="#">Recipes</a></li>
+                    <li class="menu-item"><a href="#">Recipes</a></li>                
                 </ul>
-            <nav class="socials"></nav>
-                <ul>
-                    <li class="social-item"><a href="#"instagram</li>
+            </nav>
+            <nav>
+                <ul class="socials">
+                    <li class="social-items"><a href="#"><i class="fab 
+                        fa-github"></i></a></li>
+                    <li class="social-items"><a href="#"><i class="fab 
+                        fa-codepen"></i></a></li>
                 </ul>
+            </nav>
         </header>
 
-    <main>
-        <div class="recepten">
-            <div class="recept"></div>
-              <div class="discription"></div>
-                <h2>Titel</h2>
-                <h4>Datum</h4>
-                <p>tekst</p>
-                <button>Read more</button>
-              <div class="image"></div>
+        <main>
+            <div class="recepten">
+                <div class="recept">
+                    <div class="description">
+                        <h2>Asperges Season: Fresh From the Field to the Table</h2>
+                        <h4>November 2021</h4>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates, amet quis veritatis placeat 
+                            maiores quidem! Corrupti consequatur earum nulla quod aliquid, consequuntur ad. Placeat, autem 
+                            alias officia amet nam a quam dolore doloribus ipsum consectetur veniam! Tempora, fugiat. Nihil 
+                            officiis eos, iure consequuntur laudantium hic corporis, accusamus veritatis quidem ratione alias 
+                            debitis culpa unde laborum corrupti velit omnis? Nihil ratione recusandae temporibus velit adipisci 
+                            repellat, porro iusto accusamus blanditiis ipsa vero fuga aliquam dolorum eveniet expedita reprehenderit 
+                            tempore praesentium pariatur.</p>
+                        <button>Read more</button>
+                    </div>
+                    <div class="recept-image">
+                        <img src="img/aspergers.png">
+                    </div>
+                </div>
+
+                <div class="recept-items">
+                    <div class="items">
+                        <div class="item-text">                        
+                            <h3>title</h3>
+                            <a href="#">link</a>
+                        </div>
+                        <img src="img/item-1.png">
+                    </div>
+                    <div class="items">
+                        <div class="item-text">                        
+                            <h3>title</h3>
+                            <a href="#">link</a>
+                        </div>
+                        <img src="img/item-2.png">
+                    </div>
+                    <div class="items">
+                        <div class="item-text">                        
+                            <h3>title</h3>
+                            <a href="#">link</a>
+                        </div>
+                        <img src="img/item-3.png">
+                    </div>
+                    <div class="items">
+                        <div class="item-text">                        
+                            <h3>title</h3>
+                            <a href="#">link</a>
+                        </div>
+                        <img src="img/item-4.png">
+                    </div>
+                    <div class="items">
+                        <div class="item-text">                        
+                            <h3>title</h3>
+                            <a href="#">link</a>
+                        </div>
+                        <img src="img/item-5.png">
+                    </div>
+                </div>
             </div>
-            <div class="recept-items">
-                <div class="items"></div>
-                 <h3>titel</h3>
-                <a href="#">link</a> 
-                <img src="">               
-            </div>
-    </main>
+        </main>
     </div>
 </body>
-
-    <script src="js\function.js"></script>
 </html>
