--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="class5">wat is dit?</div>
 
 
-    <button onclick="document.getElementById('id1').innerHTML = 'ik weet ook niet wat hier stond';">knop 1</button>
+    <button onclick="document.getElementById('id1').innerHTML = 'Ik weet ook niet wat hier stond';">knop 1</button>
     <button onclick="document.querySelector('#id2').innerHTML = 'Joe Mama';">Knop 2</button>
     <button class="class3" onclick="document.querySelector('.class3').innerHTML = 'Hoi';">knop 3</button>
     <button class="class4" onclick="document.querySelector('.class4').innerHTML = 'hier is het feestje';">knop 4</button>
