--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <div id="id1">wat staat hier?</div>
+    <div id="id1">Wat staat hier?</div>
     <div id="id2">Who is Joe?</div>
     <div class="class3">What?</div>
     <div class="class4">Waar is het feestje?</div>
@@ -18,7 +18,7 @@
     <button onclick="document.getElementById('id1').innerHTML = 'Ik weet ook niet wat hier stond';">knop 1</button>
     <button onclick="document.querySelector('#id2').innerHTML = 'Joe Mama';">Knop 2</button>
     <button class="class3" onclick="document.querySelector('.class3').innerHTML = 'Hoi';">knop 3</button>
-    <button class="class4" onclick="document.querySelector('.class4').innerHTML = 'hier is het feestje';">knop 4</button>
+    <button class="class4" onclick="document.querySelector('.class4').innerHTML = 'Hier is het feestje';">knop 4</button>
     <button class="class5" onclick="document.querySelector('body').innerHTML = '<a href=https://youtu.be/xvFZjo5PgG0%22%3E%22%3E%27;%22%3E target=”_blank” >klik hier!</a>'">knop 5</button> 
 
 
